# flight-streamlit-at3

./: README.md  app.py  explore_page.py  predict_page.py  prediction.py  pyproject.toml  requirements.txt
flight-prediction/: Makefile  README.md  setup.py
flight-prediction/data/itineraries_csv/: readme.txt
flight-prediction/data/raw/: readme.txt
flight-prediction/docs/: Makefile  conf.py  index.rst  make.bat
flight-prediction/models/: keras.keras  keras_model.keras  keras_tuner.keras  knn.joblib  model_keras.joblib  tfdf.joblib  tunes_keras.joblib  xgb_bestparam.joblib
flight-prediction/models/tfdf_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
flight-prediction/notebooks/: clean copy.ipynb  clean.ipynb  eda.ipynb
flight-prediction/notebooks/PM_notebooks/: model_regression-2.ipynb  model_regression.ipynb
flight-prediction/notebooks/TP_notebooks/: Phuawiriyakul_Thanchanok-24582239-keras.ipynb  clean.ipynb  corr.ipynb  keras.ipynb
flight-prediction/notebooks/TT_notebooks/: eda.ipynb  tensor_flow.ipynb
flight-prediction/notebooks/WW_notebooks/: EDA.ipynb  Wijara_Wongwara-14191732-xgboost.ipynb  clean copy.ipynb  regression.ipynb
flight-prediction/notebooks/W_notebooks/: eda.ipynb
flight-prediction/src/data/: make_dataset.py
flight-prediction/src/features/: build_features.py
flight-prediction/src/models/: null.py  predict_model.py  train_model.py
models/: tfdf.joblib
models/tfdf_model/: fingerprint.pb  saved_model.pb
models/tfdf_model/assets/: 435059869ffc46f5data_spec.pb  435059869ffc46f5random_forest_header.pb
(+24 files in other folders)
