[tool.poetry]
name = "crybaby"
version = "0.1.0"
description = ""
authors = ["wongwara.w <wongwara.w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.0.1"
scikit-learn = "1.2.2"
xgboost = "1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
